--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+  <div>
+    <img src="movie_poster.jpg" alt="Movie Poster" class="moviePic">
+    <p class="movieDetail">This is a brief description of the movie.</p>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
